                                     Xbox Media Center CHANGELOG
************************************************************************************************************* 
*************************************************************************************************************

added/fixed: (dd-mm-yyyy) (please specify date in CET)
 - 05-11-2005 changed: removed mymusictop100 keymappings from keymap.xml (window doesn't exist anymore, functionality was moved to libraryview a while back)
 - 04-11-2005 fixed: myfiles, certain .sids, .nsfs and .oggs weren't deleteable/copyable.
 - 04-11-2005 fixed: mymusic, when you changed sort method, cursor placement changed to wrong file, thx to Jmarshall for fix
 - 03-11-2005 added: added: dvdplayer, 24 bits lpcm decoding
 - 02-11-2005 changed: utf8 name conversion in song metadata during last.fm streaming
 - 02-11-2005 changed: faster start of last.fm streams
 - 02-11-2005 fixed: last.fm, code indenting
 - 02-11-2005 added: last.fm, user's recently listened tracks, sortable by date
 - 02-11-2005 fixed: last.fm, utf8 names are converted so that accented letters are properly displayed
 - 02-11-2005 fixed: last.fm, lists with decimals (ratings...) were not properly sorted (sort by size)
 - 02-11-2005 fixed: last.fm, clears directory cache when returning to root to allow multiple searches
 - 01-11-2005 fixed: xlink kai settings were hidden.
 - 01-11-2005 fixed: applied sf patch #1283584 to fix some python control issues, (Thnx to hempster)
 - 31-10-2005 changed: files ending in .ts.001 will now be consider to be mpeg files and not rar archives.
 - 31-10-2005 fixed: dvdplayer, after the last update, enabeling deinterlacing could cause a crash
 - 31-10-2005 update: dvdplayer, ffmpeg to latest version
 - 31-10-2005 fixed: dvdplayer, subtitle issues. subtitles should now be displayed if you enable them when playing a dvd